[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seismic-reporting"
version = "1.1.1"
description = "Query the USGS FDSN event service and report earthquakes sorted by magnitude, location, distance, or time."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Michael E. O'Connor" },
]
keywords = ["earthquake", "seismic", "usgs", "fdsn", "geojson"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
# No third-party runtime dependencies: the core pipeline and CLI use only
# the standard library (urllib, json, dataclasses, argparse). The GUI uses
# tkinter, which ships with CPython but is not installable from PyPI.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
seismic = "seismic_reporting.cli:main"

[project.gui-scripts]
seismic-gui = "seismic_reporting.gui:main"

[project.urls]
Homepage = "https://github.com/mikeoc61/Seismic-Reporting"
Repository = "https://github.com/mikeoc61/Seismic-Reporting"

[tool.hatch.build.targets.wheel]
packages = ["src/seismic_reporting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# UP032: prefer f-strings over str.format(). Deferred - converting the
# report-formatting calls (nested width fields) is a separate cleanup pass.
ignore = ["UP032"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
files = ["src"]
strict = true
